Отдельный пакет с общими клиент-серверными DTO
