# api/src/doc/swagger.yml
@@ -80,6 +80,17 @@ tags:
 paths:
   /authorize/login:
     post:
+      parameters:
+        - in: path
+          name: "code"
+          examples:
+            casual:
+              value: "casual"
+            manager:
+              value: "manager"
+          schema:
+            type: string
+          required: true
       tags:
         - "authorize"
       summary: "Войти"
@@ -196,35 +207,6 @@ paths:
           description: "Неавторизованный пользователь"
           content:
             "application/json":
-              schema:
-                $ref: "#/components/schemas/ServerError"
-        "500":
-          description: "Необработанная ошибка"
-          content:
-            "application/json":
-              schema:
-                $ref: "#/components/schemas/ServerError"
-  /management/authorize/login:
-    post:
-      tags:
-        - "authorize"
-      summary: "Войти с доступом упраления"
-      requestBody:
-        content:
-          "application/x-www-form-urlencoded":
-            schema:
-              $ref: "#/components/schemas/Login"
-      responses:
-        "200":
-          description: "Токены для входа"
-          content:
-            "application/json":
-              schema:
-                $ref: "#/components/schemas/Tokens"
-        "400":
-          description: "Обработанная ошибка"
-          content:
-            application/json:
               schema:
                 $ref: "#/components/schemas/ServerError"
         "500":
